...
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#ffffff "
                android:visibility="invisible" />

            <TextView
                android:id="@+id/score1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
...
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Your Score:"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#CFB53B"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/currentUserScore"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.321" />

    <TextView
...
